seafile/seafile/seafile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  annotations:
    oci.oraclecloud.com/load-balancer-type: "nlb"
    service.beta.kubernetes.io/oci-load-balancer-security-list-management-mode: "None"
spec:
  selector:
    app: seafile
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
